Fixed overlap issue on mobile

--- a/css/theme.css
+++ b/css/theme.css
@@ -18,8 +18,7 @@ h3 {
 }
 
 h4 {
-    font-size: 20px;
-    line-height: 0.5;
+    font-size: 21px;
     padding-bottom: 6px;
 }
 
